--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   </style>
 </head>
 <body>
-  <h1>Real Time Chat with Rooms</h1>
+  <h1>Real Time Chat</h1>
   <ul id="messages"></ul>
   <form id="form" action="">
     <input id="input" autocomplete="off" placeholder="Type a message..." />
